--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Uno
-Theme URI: http://www.codesymbol.com/themes/uno/
+Theme URI: https://www.codesymbol.com/themes/uno/
 Version: 1.3.7
 Author: CodeSymbol
-Author URL: http://themeforest.net/user/codesymbol/
+Author URL: https://themeforest.net/user/codesymbol/
 
 1.	Typography Setup
 2.	Template Basics
