--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 /*
 Template Name: Uno
-Template URL: http://www.codesymbol.com/templates/uno/
+Template URL: https://www.codesymbol.com/templates/uno/
 Version: 1.4.4
 Author: CodeSymbol
-Author URL: http://themeforest.net/user/codesymbol/
+Author URL: https://themeforest.net/user/codesymbol/
 
 1.	Typography Setup
 2.	Template Basics
